# pyls

./: README.md  pyls.py  pyproject.toml
test/: pylstest.py
